# text_to_video

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: build-runpod-serverless-ltx.yml
apps/api/: main.py
apps/runpod_ltx_service/: main.py
apps/runpod_service/: __init__.py  main.py
apps/studio-next/: README.md  package-lock.json  package.json
apps/studio-next/app/: globals.css  layout.tsx  page.module.css  page.tsx
apps/studio-next/app/api/commercial/: route.ts
apps/studio-next/app/api/upload/: route.ts
apps/web/: README.md  app.js  index.html  styles.css
apps/worker/: main.py
docs/: aws-lite-implementation-spec.md  bedrock-api-key-notes.md  commercial-hq-architecture.md  research-to-architecture.md  runpod-ltx-serverless.md  runpod-wan-bringup.md  runpod-worker-architecture.md  seedance-like-ec2-system-design.md
infra/: README.md  ec2-block-device-mappings.json
infra/runpod-serverless/ltx/: Dockerfile  start-serverless-ltx.sh
scripts/: bootstrap_aws.py  load-aws-env.ps1  run-api.ps1  run-worker.ps1  run_hq_commercial.py  run_ltx_commercial.py
scripts/runpod/: bootstrap-ltx-service.sh  bootstrap-ti2v-services.sh  bootstrap-wan.sh  package-repo.ps1  render-runpod-env.ps1  start-inference-service.sh  start-ltx-service.sh  start-wan-worker.sh
